# wasm-log-explorer

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/core/: engine.rs
backend/src/indexer/: scanner.rs
backend/src/search/: matcher.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: VirtualGrid.tsx
frontend/src/hooks/: useExplorerWorker.ts
frontend/src/worker/: engine.worker.ts
