[package]
name = "wasm-log-explorer"
version = "0.1.0"
edition = "2021"
description = "High-performance log streaming engine for WebAssembly"
authors = ["wasm-log-explorer"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [] }
memchr = "2.7"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
